@@ -36,7 +36,7 @@
     <!-- configure the directories -->
     <property name="jarfile" value="writer2latex"/>
     <property name="basename" value="writer2latex10"/>
-    <property name="distrofile" value="${basename}beta3.zip" />
+    <property name="distrofile" value="${basename}rc.zip" />
     <!--<property name="sourcedistrofile" value="${basename}source.zip" />-->
     <property name="src" location="source/java"/>
     <property name="source.distro" location="source/distro" />
