@@ -1,0 +1,111 @@
+# LaTeXOptions strings=Polish (Polski)
+0.LaTeXOptions.HelpText=
+1.LaTeXOptions.Title=Opcje LaTeXa (Writer2LaTeX)
+2.LaTeXOptions.FixedLine1.HelpText=
+3.LaTeXOptions.FixedLine1.Label=
+4.LaTeXOptions.GeneralLabel.HelpText=
+5.LaTeXOptions.GeneralLabel.Label=Og\u00f3lne
+6.LaTeXOptions.ConfigLabel.HelpText=
+7.LaTeXOptions.ConfigLabel.Label=Format LaTeXa
+8.LaTeXOptions.Config.HelpText=
+137.Config.StringItemList=Super-prosty artyku\u0142
+138.Config.StringItemList=Prosty artyu\u0142
+139.Config.StringItemList=Domy\u015blny
+140.Config.StringItemList=Optymalizowany do wydruku
+141.Config.StringItemList=Optymalizowany dla ekranu (pdf)
+142.Config.StringItemList=U\u017cytkownika
+15.LaTeXOptions.BackendLabel.HelpText=
+16.LaTeXOptions.BackendLabel.Label=Program
+17.LaTeXOptions.Backend.HelpText=
+116.Backend.StringItemList=Zwyk\u0142y (TeX)
+117.Backend.StringItemList=Pdf (pdfTeX)
+118.Backend.StringItemList=Postscript (dvips)
+119.Backend.StringItemList=Nieznany
+22.LaTeXOptions.InputencodingLabel.HelpText=
+23.LaTeXOptions.InputencodingLabel.Label=Kodowanie
+24.LaTeXOptions.Inputencoding.HelpText=
+120.Inputencoding.StringItemList=US ASCII
+121.Inputencoding.StringItemList=Zachodnioeuropejskie (ISO 8859-1)
+122.Inputencoding.StringItemList=\u015arodkowoeuropejskie (ISO 8859-2)
+123.Inputencoding.StringItemList=Greckie (ISO 8859-7)
+124.Inputencoding.StringItemList=\u015arodkowoeuropejskie Microsoft (Cp1250)
+125.Inputencoding.StringItemList=Cyrylica Microsoft (Cp1251)
+126.Inputencoding.StringItemList=Rosyjskie (koi8-r)
+127.Inputencoding.StringItemList=Unicode (UTF8)
+33.LaTeXOptions.Multilingual.HelpText=
+34.LaTeXOptions.Multilingual.Label=Zezw\u00f3l na wsparcie wielu j\u0119zyk\u00f3w
+35.LaTeXOptions.GreekMath.HelpText=
+36.LaTeXOptions.GreekMath.Label=U\u017cyj greckich liter jako symboli
+37.LaTeXOptions.AdditionalSymbols.HelpText=
+38.LaTeXOptions.AdditionalSymbols.Label=U\u017cywaj dodatkowych symboli
+39.LaTeXOptions.BibliographyLabel.HelpText=
+40.LaTeXOptions.BibliographyLabel.Label=Bibliografia
+41.LaTeXOptions.UseBibtex.HelpText=
+42.LaTeXOptions.UseBibtex.Label=U\u017cywaj BibTeXa dla bibliografii
+43.LaTeXOptions.BibtexStyleLabel.HelpText=
+44.LaTeXOptions.BibtexStyleLabel.Label=Styl BibTeXa
+45.LaTeXOptions.BibtexStyle.HelpText=
+46.BibtexStyle.StringItemList=plain
+47.BibtexStyle.StringItemList=unsrt
+48.BibtexStyle.StringItemList=alpha
+49.BibtexStyle.StringItemList=abbrv
+50.LaTeXOptions.BibtexStyle.Text=
+51.LaTeXOptions.FilesLabel.HelpText=
+52.LaTeXOptions.FilesLabel.Label=Pliki
+53.LaTeXOptions.WrapLines.HelpText=
+54.LaTeXOptions.WrapLines.Label=Zawijaj d\u0142ugie linie
+55.LaTeXOptions.WrapLinesAfterLabel.HelpText=
+56.LaTeXOptions.WrapLinesAfterLabel.Label=Po liczbie znak\u00f3w:
+57.LaTeXOptions.WrapLinesAfter.HelpText=
+58.LaTeXOptions.SplitLinkedSections.HelpText=
+59.LaTeXOptions.SplitLinkedSections.Label=Podziel dokument przy ka\u017cdej sekcji
+60.LaTeXOptions.SplitToplevelSections.HelpText=
+61.LaTeXOptions.SplitToplevelSections.Label=Podziel dokument przy sekcji najwy\u017cszego poziomu
+62.LaTeXOptions.SaveImagesInSubdir.HelpText=
+63.LaTeXOptions.SaveImagesInSubdir.Label=Zapisz rysunki w podkatalogu
+64.LaTeXOptions.SpecialContentLabel.HelpText=
+65.LaTeXOptions.SpecialContentLabel.Label=Zawarto\u015b\u0107 specjalna
+66.LaTeXOptions.NotesLabel.HelpText=
+67.LaTeXOptions.NotesLabel.Label=Eksport notatek:
+68.LaTeXOptions.Notes.HelpText=
+128.Notes.StringItemList=nie eksportuj
+129.Notes.StringItemList=jako komentarze
+130.Notes.StringItemList=jako notatki na marginesie
+131.Notes.StringItemList=jako notatki w pdf-ie
+73.LaTeXOptions.Metadata.HelpText=
+74.LaTeXOptions.Metadata.Label=Eksportuj w\u0142a\u015bciwo\u015bci dokumentu (metadane)
+75.LaTeXOptions.FiguresAndTablesLabel.HelpText=
+76.LaTeXOptions.FiguresAndTablesLabel.Label=Rysunki i tabele
+77.LaTeXOptions.OriginalImageSize.HelpText=
+78.LaTeXOptions.OriginalImageSize.Label=U\u017cyj oryginalnych rozmiar\u00f3w rysunk\u00f3w
+79.LaTeXOptions.OptimizeSimpleTables.HelpText=
+80.LaTeXOptions.OptimizeSimpleTables.Label=Optymalizuj proste tabele
+81.LaTeXOptions.SimpleTableLimitLabel.HelpText=
+82.LaTeXOptions.SimpleTableLimitLabel.Label=Maksymalna szeroko\u015b\u0107 w znakach
+83.LaTeXOptions.SimpleTableLimit.HelpText=
+84.LaTeXOptions.FloatTables.HelpText=
+85.LaTeXOptions.FloatTables.Label=Ruchome tabele (floating)
+86.LaTeXOptions.FloatFigures.HelpText=
+87.LaTeXOptions.FloatFigures.Label=Ruchome rysunki (floating)
+88.LaTeXOptions.FloatOptionsLabel.HelpText=
+89.LaTeXOptions.FloatOptionsLabel.Label=Umieszczenie rysunk\u00f3w
+90.LaTeXOptions.FloatOptions.HelpText=
+132.FloatOptions.StringItemList=G\u00f3ra lub d\u00f3\u0142 strony
+133.FloatOptions.StringItemList=G\u00f3ra strony
+134.FloatOptions.StringItemList=D\u00f3\u0142 strony
+135.FloatOptions.StringItemList=Tutaj lub na g\u00f3rze strony
+136.FloatOptions.StringItemList=Tutaj lub na dole strony
+96.LaTeXOptions.AutoCorrectLabel.HelpText=
+97.LaTeXOptions.AutoCorrectLabel.Label=Automatyczna korekcja
+98.LaTeXOptions.IgnoreHardPageBreaks.HelpText=
+99.LaTeXOptions.IgnoreHardPageBreaks.Label=Ignoruj twarde \u0142amania stron
+100.LaTeXOptions.IgnoreHardLineBreaks.HelpText=
+101.LaTeXOptions.IgnoreHardLineBreaks.Label=Ignoruj twarde \u0142amania linii
+102.LaTeXOptions.IgnoreEmptyParagraphs.HelpText=
+103.LaTeXOptions.IgnoreEmptyParagraphs.Label=Ignoruj puste paragrafy
+104.LaTeXOptions.IgnoreDoubleSpaces.HelpText=
+105.LaTeXOptions.IgnoreDoubleSpaces.Label=Ignoruj podw\u00f3jne odst\u0119py
+106.LaTeXOptions.ExportButton.HelpText=
+107.LaTeXOptions.ExportButton.Label=Eksportuj
+108.LaTeXOptions.CancelButton.HelpText=
+109.LaTeXOptions.CancelButton.Label=Anuluj
