@@ -1,0 +1,1 @@
+Writer2LaTeX dostarcza filtrów eksportu programu Writer do LaTeXa i BibTeXa
