@@ -18,6 +18,7 @@
     <name lang="es">Writer2LaTeX filtros para exportar</name>
     <name lang="fr">Filtres d'exportation Writer2LaTeX</name>
     <name lang="it">Filtri di esportazione Writer2LaTeX</name>
+    <name lang="pl">Filtry ekportu Writer2LaTeX</name>
     <name lang="ru">Фильтры экспорта Writer2LaTeX</name>
     <name lang="uk">Фільтри експорту Writer2LaTeX</name>
     <name lang="tr">Writer2LaTeX ihraç etme filitreleri</name>
@@ -30,6 +31,7 @@
     <src xlink:href="desc_es.txt" lang="es" />
     <src xlink:href="desc_fr.txt" lang="fr" />
     <src xlink:href="desc_it.txt" lang="it" />
+    <src xlink:href="desc_pl.txt" lang="pl" />
     <src xlink:href="desc_ru.txt" lang="ru" />
     <src xlink:href="desc_uk.txt" lang="uk" />
     <src xlink:href="desc_tr.txt" lang="tr" />
